--- a/preamble.tex
+++ b/preamble.tex
@@ -62,7 +62,7 @@
 %\newcommand{\bem}[1]{\paragraph{Bemerkung:}#1}
 %\newcommand{\kor}[2]{\paragraph{Korollar #1:}#2}
 %\newcommand{\lemma}[2]{\paragraph{Lemma #1:}#2}
-%\renewcommand{\O}{\mathcal O}
+\renewcommand{\O}{\mathcal O}
 %\newcolumntype{M}{>{$}c<{$}}
 %%\renewcommand*\arraystretch{1.5}
 %\newcommand{\C}{\operatorname{C}}
