--- a/section2.tex
+++ b/section2.tex
@@ -201,7 +201,7 @@ Subskript wird weggelassen falls keine Verwechslungsgefahr besteht.
 	Wir verwenden den Begriff ``Mannigfaltigkeit'' nicht im strengen differentialgeometrischen Sinn, weil keine Stetigkeit / Diffbarkeit von $\LM$ gefordert wird.
 \end{bem}
 
-\begin{bsp}[Thermischer Block]
+\begin{bsp}[Thermischer Block] \label{2.10}
 	TODO
 \end{bsp}
 
