--- a/section2.tex
+++ b/section2.tex
@@ -130,10 +130,11 @@ Subskript wird weggelassen falls keine Verwechslungsgefahr besteht.
 \end{satz}
 
 \begin{satz}[Übertragung von Koeffizienten-Eigenschaften]
+\label{2.6}
 	Seien $f$ bzw.\ $a$ separierbar parametrische stetige Linear- bzw.\ Bilinearform.
 	\begin{enumerate}
 		\item Falls $\Theta_f^q(\mu)$ bzw.\ $\Theta_a^q(\mu)$ beschränkt sind, dann sind $f$ bzw.\ $a$ gleichmäßig beschränkt bzgl.\ $\mu$.
-		\item Falls $\Theta_a^q(\mu)$ strikt positiv, d.h.\ ex.\ $\bar \Theta$ mit $\Theta_a^q(\mu) \geq \bar \Theta > 0$ $\forall \mu \in \p$ alle Komponenten positiv semidefinit, d.h.\ $a^q(v,v) \geq 0$ $\forall v,q$ und $a(\pdot,\pdot;\bar \mu)$ ist koerziv für mindestens ein $\bar \mu \in \p$, dann ist $a$ gleichmäßig koerziv bzgl.\ $\mu$.
+		\item Falls $\Theta_a^q(\mu)$ strikt positiv, d.h.\ ex.\ $\bar \Theta$ mit $\Theta_a^q(\mu) \geq \bar \Theta > 0$ $\forall \mu \in \p$ alle Komponenten positiv semidefinit, d.h.\ $a^q(v,v) \geq 0$ $\forall v,q$ und $a(\pdot,\pdot;\bar \mu)$ ist koerziv für mindestens ein $\bar \mu \in \p$, dann ist $a$ gleichmäßig koerziv bzgl.\ $\mu$. 
 		\item Falls $\Theta_f^q$, $\Theta_a^q$ Lipschitz-stetig, so ist $f$, $a$ Lipschitz-stetig bzgl.\ $\mu$.
 	\end{enumerate}
 
